css/styles.css
/* ... */
@media screen and (max-width: 420px) {
    .section-5-form-group label {
        font-size: 16px;
    }
}

/* active state */
.section-5-form-group input:focus ~ label,
.section-5-form-group input:valid ~ label,
.section-5-form-group .errValidForm ~ label {
    top: -15px;
    font-size: 14px;
    color: #5264AE;
}


/* BOTTOM BARS ================================= */
.section-5-form-group-bar {
    position: relative;
    display: block;
    width: 320px;
}

.section-5-form-group-bar:before,
.section-5-form-group-bar:after {
    content: "";
    height: 2px;
    width: 0;
    bottom: 0;
    position: absolute;
    background: #5264AE;
    transition: 0.2s ease all;
    -moz-transition: 0.2s ease all;
    -webkit-transition: 0.2s ease all;
}

.section-5-form-group-bar:before {
    left: 50%;
}

.section-5-form-group-bar:after {
    right: 50%;
}

/* active state */
.section-5-form-group input:focus ~ .bar:before,
.section-5-form-group input:focus ~ .bar:after {
    width: 50%;
}

.section-5-form button {
    width: 200px;
    height: 60px;
    margin: 20px 0 40px 0;
    background: #FB765F;
    border-radius: 30px;

    font-family: Open Sans;
    font-style: normal;
    font-weight: 600;
    font-size: 16px;
    line-height: 22px;
    color: #FFFFFF;
}

footer {
    padding: 30px 0;
    background: #162D5A;
}

.footer-inner {
    height: 100%;
    align-items: center;
}

@media screen and (max-width: 1100px) {
    .footer-inner.container.row {
        flex-direction: column;
    }

    .footer-inner div {
        margin: 5px 0;
    }
}

footer a {
    font-style: normal;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    color: white;
    padding: 10px;
}

footer a:hover {
    text-decoration: underline;
}

footer a:hover[href="index.html"] {
    text-decoration: none;
}

footer .tel {
    font-family: Open Sans;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 33px;
    color: #FFFFFF;
}

.footer-visago {
    font-family: Roboto;
    font-style: italic;
    font-weight: bold;
    font-size: 24px;
    line-height: 28px;

    color: #FFFFFF;
}

.swiper-wrapper-inner {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

#collapse-navbar {
    position: fixed;
    width: 250px;
    background: white;
    /*border-right: 4px solid #e0e5ea;*/
    right: -360px;
    /*border-radius: 10px;*/
    -moz-transition: all 600ms;
    -webkit-transition: all 600ms;
    transition: all 600ms;
}

#collapse-navbar.active {
    right: 20px;
    z-index: 2000;
}

#collapse-navbar ul li {
    width: 90%;
    margin-left: 10%;
    padding: 15px 10px;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    color: #25233A;
}

#collapse-navbar ul li a {
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 29px;
    color: #25233A;
}

.collapse-navbar ul li a:hover {
    color: #dc3545;
}

#userEmail-error,
#callTime-error,
#userName-error {
    margin-top: 25px;
    color: #dc3545;
}

.collapse {
    list-style-type: none;
}

.collapse-header-container {
    border-bottom: 1px solid gray;
}

.collapse-header {
    position: absolute;
    display: inline-block;
    width: 20px;
    height: 20px;
    right: 20px;
    text-align: center;
    align-items: center;
}

.collapse-body {
    display: none;
    border-top: 1px solid gray;
    align-items: center;
}

.collapse-body > div {
    margin-top: 15px;
    font-style: normal;
    font-weight: 500;
    font-size: 8px;
    line-height: 22px;
    align-items: center;
    color: #25233A;
}

/*.collapse-body > div > a {*/
/*font-style: normal;*/
/*font-weight: 500;*/
/*font-size: 8px;*/
/*line-height: 22px;*/
/*color: #25233A;*/
/*}*/

